[gd_scene load_steps=5 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sounds/pcboot.ogg" type="AudioStream" id=2]
[ext_resource path="res://mainmenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="mainmenu" type="Node"]
script = ExtResource( 3 )

[node name="container" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg" type="ColorRect" parent="container"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )

[node name="logoContainer" type="ReferenceRect" parent="container/bg"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -237.0
margin_bottom = 237.0

[node name="Label" type="Label" parent="container/bg/logoContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = -118.5
margin_right = 118.5
margin_bottom = 118.5
custom_colors/font_color = Color( 0.980392, 0.498039, 0.498039, 1 )
custom_fonts/font = SubResource( 1 )
text = "Electron Driven
Software
Inc."
align = 1
valign = 1
autowrap = true

[node name="logsContainer" type="ReferenceRect" parent="container/bg"]
margin_right = 575.0
margin_bottom = 720.0

[node name="Label1" type="Label" parent="container/bg/logsContainer"]
visible = false
margin_right = 575.0
margin_bottom = 69.0
text = "Bios v3.214va, Electron Driven software.
Copyright (C) 199x - 2077."
valign = 1

[node name="Label2" type="Label" parent="container/bg/logsContainer"]
visible = false
margin_top = 69.0
margin_right = 575.0
margin_bottom = 138.0
text = "Pencilium-s CPU at 420MHz
Memory Test : 28980K OK"
valign = 1

[node name="Label3" type="Label" parent="container/bg/logsContainer"]
visible = false
margin_top = 138.0
margin_right = 575.0
margin_bottom = 207.0
text = "Detecting cool Age of empires gold install screen
Detecting Herobrine
Detecting behind you
Detecting just kidding"

[node name="Label4" type="Label" parent="container/bg/logsContainer"]
visible = false
margin_top = 207.0
margin_right = 575.0
margin_bottom = 276.0
text = "Motherboard . . . OK
CPU . . . OK
Graphics card . . . not with these prices
RAM . . . OK"

[node name="Label5" type="Label" parent="container/bg/logsContainer"]
visible = false
margin_top = 276.0
margin_right = 575.0
margin_bottom = 345.0
text = "Hard drive . . . OK but too many images of furry creatures
Sound card . . . OK"

[node name="Label6" type="Label" parent="container/bg/logsContainer"]
visible = false
margin_top = 345.0
margin_right = 575.0
margin_bottom = 414.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
